--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,9 @@
     <link rel="stylesheet" href="assets/css/components.css">
     <link rel="stylesheet" href="assets/css/animation.css">
   
-  <!--<link rel="stylesheet" href="css/owl.theme.css">
-  <link rel="stylesheet" href="css/owl.carousel.css">
-  <link rel="stylesheet" href="css/vegas.min.css">-->
+  
   <link rel="stylesheet" href="assets/css/style.css">
 
-  <!-- Google web font  -->
-  <!--<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,300' rel='stylesheet' type='text/css'>
-  https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;600;700&family=Roboto:wght@100;200;300&display=swap-->
   
 </head>
 <body id="top" data-spy="scroll" data-offset="50" data-target=".navbar-collapse">
@@ -110,11 +105,10 @@
       <div class="row justify-content-center">
         <div class='col-md-7 col-sm-6 wow fadeInUp' data-wow-delay="0.2s">
           <h4>Why is <b>SHIBAKEMON</b> the superior dogecoin?</h4>
-            <p class="wow fadeInUp skinny"><b>SHIBAKEMON</b> is the first dogecoin for everyone. Built from head to paw for democratic access, it is <b>100x cheaper</b> to send than comparison ERC-20 pups. </p>
+            <p class="wow fadeInUp skinny"><b>SHIBAKEMON</b> is the first dogecoin for everyone. Built from head to paw for democratic access, it is <b>100x potential</b>  </p>
 
             <p class="wow fadeInUp skinny"><br/><b>All tokens are locked</b> in UniSwap and the keys burned. SHIBAKEMON is truly community owned.</b></p>
 
-            <p class="wow fadeInUp skinny"><br/>Built on the Binance Smart Chain as a BEP-20 contract, SHIBAKEMON uses a <b>fraction of the electricity</b> of Ethereum tokens. Having fun with dogecoins does not need to harm the environment!</p>
 
         </div>
         <div class='col-md-5 wow fadeInUp about-img' data-wow-delay="0.2s"> <img src="assets/images/shutterstock_17495182192_rasterized4.png" title="SHIBAKEMON" alt = "SHIBAKEMON" class="fit-image"></div>
@@ -123,11 +117,11 @@
       <div class="row white about-box">
         <div class='col-md-4 wow fadeInUp about-col' data-wow-delay="0.3s">
           <h3 class="heading">100% Community Owned, and we mean it</h3>
-              <p class="description">We <a href="#" title="SHIBAKEMON BSCScan">locked 100%</a> of the total supply on UniSwap and <a href="#" title="SHIBAKEMON Proof">threw away the keys</a>. There is no developer fund, no chunks owned by celebrities and no mining rewards for people with fancy computers. All tokens are up for grabs by pups everywhere!</p>
+              <p class="description">We <a href="#" title="SHIBAKEMON ">locked 100%</a> of the total supply on UniSwap and <a href="#" title="SHIBAKEMON Proof">threw away the keys</a>. There is no developer fund, no chunks owned by celebrities and no mining rewards for people with fancy computers. All tokens are up for grabs by pups everywhere!</p>
         </div>
         <div class='col-md-4 wow fadeInUp about-col' data-wow-delay="0.4s">
-          <h3 class="heading">SHIBAKEMON has 100x Lower Fees</h3>
-              <p class="description">Ethereum gas fees have soared to $200 for a simple token exchange, locking everyday pups out of ownership. SHIBAKEMON is designed from the ground up as a <b><nobr>BEP-20</nobr></b> token on the Binance Smart Chain, so it can be transferred and exchanged for just cents!</p>
+          <h3 class="heading">SHIBAKEMON has 100x Potential</h3>
+              <p class="description">100x potential</p>
         </div>
         <div class='col-md-4 wow fadeInUp about-col' data-wow-delay="0.5s">
           <h3 class="heading">SHIBAKEMON has 10x fewer tokens</h3>
@@ -160,12 +154,12 @@
     <div class="row justify-content-center">
       <div class="col-md-7 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
         <div class="about-thumb">
-          <h4>Become a <a href="#" title="SHIBAKEMON Contract Address" target="_blank">SHIBAKEMON</a> owner</h4>
+          <h4>Become a <a href="#" title="SHIBAKEMON Contract Address" target="_blank">$SHIBAKEMON</a> owner</h4>
           <ol>
             <li><h5>Install <a href="https://metamask.io/" title="GetSHIBAKEMON into your wallet" target="_blank">MetaMask</a></h5>
               Follow their guide and finish the setup.<a href="#" title="A prerequesite to owning SHIBAKEMON" target="_blank"></a></li>
             <li><h5>Send to MetaMask</h5>
-              Once you have setup metamask, you can send ETH from an exchange like Kraken, Coinbase or Binance to your Metamask address.</li>
+              Once you have setup metamask, you can send ETH from an exchange like Kraken.</li>
               <li><h5>Connect to Uniswap</h5>
                 Connect to Uniswap
                 Go to uniswap.org and click the "Use Uniswap" button.
@@ -179,7 +173,7 @@
 
       <div class="col-md-5 col-sm-6 wow fadeInUp padding-top" data-wow-delay="0.2s"> <!-- about-img"> -->
           img
-        <img src="assets/img/metamask.png" title="How to BuySHIBAKEMON" alt = "BuySHIBAKEMON on Uniswap" width="75%" height="75%"> <!-- class="img-responsive img-circle">-->
+        <img src="assets/img/metamask.png" title="How to Buy SHIBAKEMON" alt = "Buy SHIBAKEMON on Uniswap" width="75%" height="75%"> <!-- class="img-responsive img-circle">-->
       </div>
     </div>
   </div>
