--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
       <div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0s">
         <img src="assets/images/logo.png" title="SHIBAKEMON" alt="shibakemon" width="33%" height="33%">
         <h1 class="wow fadeInUp" data-wow-delay="0.2s"><b>SHIBA</b>KEMON</h1>
-        <h2 class="wow fadeInUp" data-wow-delay="0.4s"><span style="letter-spacing:0.1em; font-size:0.8rem; text-transform:none">Shibakemon address</span><br></h2><br> <!--and Environmentally Friendly-->
+        <h2 class="wow fadeInUp" data-wow-delay="0.4s"><span style="letter-spacing:0.1em; font-size:0.8rem; text-transform:none">0x9540CC6C10B210E6214AEC8B88A7B0B30e077745</span><br></h2><br> <!--and Environmentally Friendly-->
         <span style="color: white; font-size: 18px; font-weight: 800" class="wow fadeInUp" data-wow-delay="0.5s">
         Join the discussion at <a href="https://t.me/SHIBAKEMON">telegram.me/SHIBAKEMON</a>!
         </span>
@@ -70,7 +70,7 @@
         <br>
 
 
-        <a href="https://app.uniswap.org/#/swap?outputCurrency=" class="btn btn-success btn-lg wow fadeInUp" data-wow-delay="0.6s" target="_blank" title="Find SHIBAKEMON on UniSwap">Find on UniSwap</a> <!--</div> --><br>
+        <a href="https://app.uniswap.org/#/swap?outputCurrency=0x9540CC6C10B210E6214AEC8B88A7B0B30e077745" class="btn btn-success btn-lg wow fadeInUp" data-wow-delay="0.6s" target="_blank" title="Find SHIBAKEMON on UniSwap">Find on UniSwap</a> <!--</div> --><br>
 
         
         <div class="col-md-12 col-sm-12">
@@ -164,8 +164,8 @@
                 Connect to Uniswap
                 Go to uniswap.org and click the "Use Uniswap" button.
                 When Metamask asks for your signature, sign it.</li>
-            <li><h5>Swap your ETH for $SHIBAKEMON<a href="https://app.uniswap.org/#/swap?outputCurrency=" title="Exchange SHIBAKEMON on UniSwap" target="_blank"></a></h5>
-              Specify the SHIBAKEMON contract address: <a href="https://app.uniswap.org/#/swap?outputCurrency=" title="SHIBAKEMON Contract Address" target="_blank">Shibakemon address</a> <br>You may need to increase slippage in Settings. Make sure to leave a small amount of ETH for network fees!</li>
+            <li><h5>Swap your ETH for $SHIBAKEMON<a href="https://app.uniswap.org/#/swap?outputCurrency=0x9540CC6C10B210E6214AEC8B88A7B0B30e077745" title="Exchange SHIBAKEMON on UniSwap" target="_blank"></a></h5>
+              Specify the SHIBAKEMON contract address: <a href="https://app.uniswap.org/#/swap?outputCurrency=0x9540CC6C10B210E6214AEC8B88A7B0B30e077745" title="SHIBAKEMON Contract Address" target="_blank">0x9540CC6C10B210E6214AEC8B88A7B0B30e077745</a> <br>You may need to increase slippage in Settings. Make sure to leave a small amount of ETH for network fees!</li>
             <li><h5>Select the amount of ETH that you want to convert to $SHIBAKEMON.</h5> Click the SWAP button to finalize your trade. We recommend using the FAST option in Metamask for gas fee then clicking SAVE.<a href="" target="_blank"></a>. Enjoy!</li>
           </ol>
         </div>
